--- a/PWA/memo.css
+++ b/PWA/memo.css
@@ -1,20 +1,19 @@
+*{
+    padding: 0px;
+    margin: 0px;
+}
 body {
     background: #edf0f1;
-    padding: 80px 0 0 0;
+
   }
   
   
   header {
     width: 100%;
     height: 80px;
-  
-    position: fixed;
-    margin-top: 
+    position: relative;
     padding: 15px;
-    top: 0;
-    left: 0;
     z-index: 5;
-  
     background: black;
     box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
     border-bottom-right-radius: 10px;
@@ -22,7 +21,7 @@ body {
   }
   
   header input {
-    width: 100%;
+    width: 95%;
     height: 50px;
     float: left;
     color: #fff;
@@ -40,13 +39,13 @@ body {
     color: rgba(255, 255, 255, 0.75);
   }
   
-  header button {
+header button {
     width: 50px;
     height: 50px;
   
     position:absolute;
     top:15px;
-    right:15px;
+    right:1.5%;
     z-index:2;
   
     border-radius: 25px;
@@ -73,15 +72,12 @@ body {
     padding: 15px;
   }
   
-  ul.list {
-    width: 100%;
-    float: left;
-  }
-  
+
+
   ul.list li {
-    width: 100%;
+    width: 90%;
     min-height: 50px;
-    float: left;
+    margin: 20px auto;
     font-size: 14px;
     font-weight: 500;
     color: #444;
@@ -90,9 +86,9 @@ body {
     border-radius: 5px;
     position: relative;
     box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.10);
-    margin: 0 0 10px 0;
     padding: 14px 100px 14px 14px;
     word-break: break-word;
+    list-style: none;
   }
   
   ul.list li:last-of-type {
@@ -133,12 +129,10 @@ body {
   
   ul.list li .buttons button svg {
     width: 22px;
-    height: 22px;
-  
+    height: 22px; 
     position: absolute;
     top: 50%;
     left: 50%;
-  
     margin: -11px 0 0 -11px;
   }
   
@@ -212,3 +206,6 @@ body {
     font-size: 20px;
     color: #aaa;
   }
+
+@media screen and (max-width: 320px){
+}
