--- a/PWA/navbar.css
+++ b/PWA/navbar.css
@@ -5,7 +5,6 @@
 
 header{
     width: 100%;
-    height: auto;
 }
 
 nav{
@@ -13,6 +12,7 @@ nav{
     overflow: hidden;
     position: fixed;
     width: 100%;
+    height: 70px;
     box-shadow: -2px -7px 47px 9px rgba(0,0,0,0.35);
     -moz-box-shadow: -2px -7px 47px 9px rgba(0,0,0,0.35);
     -webkit-box-shadow: -2px -7px 47px 9px rgba(0,0,0,0.35);
@@ -20,18 +20,19 @@ nav{
 nav ul li a{
     position: relative;
     color: #000;
-    transition: linear 0.1s;
+
 
 }
 
 li > a:hover{
     border-bottom: 4px solid black;
-
+    transition: linear 0.2s;
 }
 
 .logo{
     float: left;
-    padding: 18px;
+    font-size: 35px;
+    padding: 10px;
 }
 
 .nav-icon{
@@ -50,7 +51,6 @@ li > a:hover{
 nav a{
     text-decoration: none;
     color: #282828;
-    font-size: 20px;
     padding: 5px;
 }
 
@@ -65,8 +65,9 @@ nav ul{
 
 nav ul li{
     float: right;
-    display: inline-block;
+    font-size: 25px;
     padding: 20px;
+    list-style: none;
 }
 
 
@@ -78,7 +79,7 @@ nav ul li{
     nav ul{
         background: #ffffff;
         max-height: 0;
-        width: 100%
+        width: 100%;
     }
 
     nav ul.show{
