--- a/PWA/memo.css
+++ b/PWA/memo.css
@@ -1,223 +1,140 @@
-*{
+body {
+    width: 100%;
+    background-color: pink;
+    padding: 0px;
+    margin: 0px;
+    font-family: DejaVu Sans Mono, monospace;
+    overflow-x: hidden;
+}
+.title{
+    width: 100%;
+    height: 100px;
+    display: inline-block;
+    text-align: center;
+}
+
+#header{
+    width: 100%;
+    height:100px; 
+    background-color: blueviolet;
+    display: inline-block;
+    padding: 0px;
+    margin: 0px;  
+}
+#main{
+    width: 100%;
+    height: inherit;
+    display: inline-block;
     padding: 0px;
     margin: 0px;
 }
-body {
-    background: #edf0f1;
-
-  }
-  
-  
-  header {
+.container{
     width: 100%;
-    height: 80px;
-    position: relative;
-    padding: 15px;
-    z-index: 5;
-    background: black;
-    box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-  }
-  
-  header input {
-    width: 95%;
-    height: 50px;
-    float: left;
-    color: #fff;
-    font-size: 20px;
-    text-indent: 18px;
-    padding: 0 60px 0 0;
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 5px 25px 25px 5px;
-    border: 0px;
-    box-shadow: none;
-    outline: none;
-  }
-  
-  header input:placeholder{
-    color: rgba(255, 255, 255, 0.75);
-  }
-  
-header button {
-    width: 50px;
-    height: 50px;
-  
-    position:absolute;
-    top:15px;
-    right:1.5%;
-    z-index:2;
-  
-    border-radius: 25px;
-    background: #fff;
-    border: 0px;
-    box-shadow: none;
-    outline: none;
-    cursor: pointer;
-  }
-  
-  header button svg {
-    width: 16px;
-    height: 16px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: -8px 0 0 -8px;
-  }
-  
-  
-  .container {
-    width: 100%;
-    float: left;
-    padding: 15px;
-  }
-  
-
-
-  ul.list li {
-    width: 90%;
-    min-height: 50px;
-
-    font-size: 14px;
-    font-weight: 500;
-    color: #444;
-    line-height: 22px;
-    background: #fff;
-    border-radius: 5px;
-    position: relative;
-    box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.10);
-    padding: 14px 100px 14px 14px;
-    word-break: break-word;
-    list-style: none;
-  }
-  
-  ul.list li:last-of-type {
-    margin: 0;
-  }
-  
-  ul.tlist li .buttons {
-    width: 100px;
-    height: 50px;
-  
-    position: absolute;
-    top: 0;
-    right: 0;
-  }
-  
-  ul.list li .buttons button {
-    width: 50px;
-    height: 50px;
-    float: left;
-    background: none;
-    position: relative;
-    border: 0px;
-    box-shadow: none;
-    outline: none;
-    cursor: pointer;
-  }
-  
-  ul.list li .buttons button:last-of-type:before {
-    content: '';
-    width: 1px;
-    height: 30px;
-    background: #edf0f1;
-  
-    position: absolute;
-    top: 10px;
-    left: 0;
-  }
-  
-  ul.list li .buttons button svg {
-    width: 22px;
-    height: 22px; 
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: -11px 0 0 -11px;
-  }
-  
-  ul.list li .buttons button.complete svg {
-    border-radius: 11px;
-    border: 1.5px solid #25b99a;
-  
-    transition: background 0.2s ease;
-  }
-  
-  ul.list#paid li .buttons button.complete svg {
-    background: #25b99a;
-    border: 0px;
-  }
-  
-  ul.list:not(#paid) li .buttons button.complete:hover svg {
-    background: rgba(37, 185, 154, 0.75);
-  }
-  
-  ul.list:not(#paid) li .buttons button.complete:hover svg .fill {
-    fill: #fff;
-  }
-  
-  ul.list#oaid li .buttons button.complete svg .fill {
-    fill: #fff;
-  }
-  
-  ul.list li .buttons button svg .fill {
-    transition: fill 0.2s ease;
-  }
-  
-  ul.list li .buttons button.remove svg .fill {
-    fill: #c0cecb;
-  }
-  
-  ul.list li .buttons button.remove:hover svg .fill {
-    fill: #e85656;
-  }
-  
-  ul.list li .buttons button.complete svg .fill {
-    fill: #25b99a;
-  }
-  
-  ul.list#paid {
-    position: relative;
-    padding: 60px 0 0 0;
-  }
-  
-  ul.list#paid:before {
-    content: '';
-    width: 150px;
-    height: 1px;
-    background: #d8e5e0;
-  
-    position: absolute;
-    top: 30px;
-    left: 50%;
-    margin: 0 0 0 -75px;
-  }
-  
-  ul.list#unpaid:empty::after{
-    content: 'You have nothing to pay';
-  }
-
-  ul.list#paid:empty:after {
-    content: 'You have not paid anything';
-  }
-  
-  
-
-  ul.list#unpaid:after {
-    width: 100%;
-    display: block;
-    text-align: center;
-    font-size: 20px;
-    color: #aaa;
-  }
-
-  ul.list#paid:after {
-    width: 100%;
-    display: block;
-    text-align: center;
-    font-size: 20px;
-    color: #aaa;
-  }
-
-@media screen and (max-width: 320px){
+    height: inherit;
+    background-color: aqua;
+    padding: 5px;
+    margin: 0px;
+    font-size: 30px;
 }
+.container ul li {
+    list-style-type: none;
+    border-bottom: thin solid black;
+    padding: 0px;
+    margin: 0px;
+    height: inherit;
+}
+#addform {
+    width: 60%;
+    height: inherit;
+    border-style: solid;
+    border-width: thin;
+    border-color: black;
+    object-position: center;
+    margin-left: 20%;
+    margin-right: 20%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    background-color: darkseagreen;
+    border-radius: 10px;
+    font-size: 30px;
+    
+}
+input[type=number],[type=date] {
+    width: 60%;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 3px solid #ccc;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+    border-radius: 5px;
+    font-family: DejaVu Sans Mono, monospace;
+    font-size: 30px;
+
+}
+input[type=number],[type=date]:focus {
+    border: 3px solid #555;
+}
+select{
+    width: 60%;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 3px solid #ccc;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+    border-radius: 5px;
+    font-family: DejaVu Sans Mono, monospace;
+    font-size: 30px;
+}
+select:focus {
+    border: 3px solid #555;
+}
+#add{
+    width: 40%;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 3px solid #555;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+    border-radius: 5px;
+    font-family: DejaVu Sans Mono, monospace;
+    font-size: 30px;
+    
+}
+#bg {
+    background-color: cornflowerblue;
+    width: 100%;
+    height: inherit;
+    padding-top: 10px;
+    padding-bottom: 10px;    
+    
+}
+ul button{
+    width: 15%;
+    height: 40px;
+    box-sizing: border-box;
+    border: 3px solid #555;
+    outline: none;
+    border-radius: 5px;
+    font-family: DejaVu Sans Mono, monospace;
+    position: relative;
+    left: 75%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    font-size: 30px;
+}
+ul p{
+    position: relative;
+    top: -50px;
+    right: -40%;
+}
+
