--- a/Front-End/css/style.css
+++ b/Front-End/css/style.css
@@ -34,7 +34,13 @@ header a{
     color: white;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 16px;
+    font-size: 20px;
+    
+}
+
+header a:hover{
+    text-shadow: 2px 2px 4px orange;
+    font-size: 21px;
 }
 
 ul{
@@ -46,6 +52,10 @@ header li{
     float: left;
     display: inline;
     padding: 0px 20px 0px 20px;
+}
+
+form{
+    margin: 90%;
 }
 
 #title{
@@ -62,13 +72,18 @@ nav{
     padding: 0;
 }
 
+button{
+    float: right;
+    
+}
 
 #map{
     min-height: 300px;
-    height: 350px;
+    height: 450px;
     background-color: darkgray;
     text-align: center;
     color: white;
+    display: none;
 }
 
 #border{
@@ -76,16 +91,25 @@ nav{
     background: #35424a;
 }
 
-button{
+label{
     text-transform: uppercase;
-    height: 50px;
+    height: 40px;
     width: 128px;
     margin: 10px;
     float: left;
     border-radius: 15px;
+    border: 3px solid;
     text-align: center;
     align-content: center;
+    background: white;
+    padding-top: 15px;
+    
 }
+
+input{
+    display: none;
+}
+
 
 .map-box {
     width: 50%;
@@ -93,7 +117,13 @@ button{
     height: 100%;
 }
 
-button:hover{
+img{
+    padding-top: 10px;
+    width: 100%;
+    display: none;
+}
+
+label:hover{
     border: 3px orange solid;
     background-color: gray;
 }
@@ -102,10 +132,11 @@ button:hover{
 .box{
     float: left;
     width: 45%;
-
+    display: none;
     border: 3px black solid;
     margin: 2px;
 }
+
 
 footer{
     background: orange;
@@ -121,9 +152,11 @@ footer{
         text-align: center;
         width: 100%;
     }
-    button{
+    label{
         display: block;
         width:100%;
+        height: 25px;
+        padding-top: 5px;
     }
     .box{
         align-content: center;
@@ -134,6 +167,26 @@ footer{
     .container form{
         width: 90%;   
     }
+    img{
+        padding-top: 50px;
+        width: 250px;
+        margin: 0;
+    }
+    
+    button{
+        float: none;
+        width: 100%;
+    }
+    
+    #map .container{
+        margin: 0px;
+        padding: 0px;
+    }
+    
+    #map{
+        height: 100px;
+    }
+
 }
 
 
