--- a/Front-End/css/style.css
+++ b/Front-End/css/style.css
@@ -54,9 +54,6 @@ header li{
     padding: 0px 20px 0px 20px;
 }
 
-form{
-    margin: 90%;
-}
 
 #title{
     float:left;
@@ -78,8 +75,7 @@ button{
 }
 
 #map{
-    min-height: 300px;
-    height: 450px;
+    height: 490px;
     background-color: darkgray;
     text-align: center;
     color: white;
@@ -89,12 +85,14 @@ button{
 #border{
     padding: 15px;
     background: #35424a;
+    padding-left: 16px;
+    
 }
 
 label{
     text-transform: uppercase;
     height: 40px;
-    width: 128px;
+    width: 172px;
     margin: 10px;
     float: left;
     border-radius: 15px;
@@ -112,14 +110,14 @@ input{
 
 
 .map-box {
-    width: 50%;
+    width: 60%;
     margin: 0 auto;
     height: 100%;
 }
 
 img{
     padding-top: 10px;
-    width: 100%;
+    width: 615px;
     display: none;
 }
 
@@ -154,7 +152,7 @@ footer{
     }
     label{
         display: block;
-        width:100%;
+        width: 100%;
         height: 25px;
         padding-top: 5px;
     }
@@ -168,7 +166,7 @@ footer{
         width: 90%;   
     }
     img{
-        padding-top: 50px;
+/*        padding-top: 50px;*/
         width: 250px;
         margin: 0;
     }
@@ -181,10 +179,17 @@ footer{
     #map .container{
         margin: 0px;
         padding: 0px;
+        width: 95%;
+        
     }
     
     #map{
-        height: 100px;
+        margin: 0px;
+        height: 210px;
+        padding: 0px;
+/*        padding-right: 30px;/ */
+/*        padding: 0px;*/
+        
     }
 
 }
