--- a/Front-Endv2/css/style.css
+++ b/Front-Endv2/css/style.css
@@ -1,13 +1,16 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
+    font-size: 25px;
     line-height: 1.5;
     margin: 0px;
     padding: 0px;
     background-color: #f4f4f4;
 }
 
-
+span{
+    color: orange;
+    text-transform: uppercase;
+}
 .container{
     width: 80%;
     margin: auto;
@@ -69,7 +72,7 @@ nav{
     padding: 0;
 }
 
-button{
+form button{
     float: right;
     
 }
@@ -141,57 +144,10 @@ footer{
     color: white;
     height: 50px;
     padding: 10px;
+    
 }
 
-@media(max-width: 768px){
-    header #title, nav, nav li{
-        float: none;
-        text-align: center;
-        width: 100%;
-    }
-    label{
-        display: block;
-        width: 100%;
-        height: 25px;
-        padding-top: 5px;
-    }
-    .box{
-        align-content: center;
-        float: none;
-        width: 95%;
-        margin: 1px;
-    }
-    .container form{
-        width: 90%;   
-    }
-    img{
-/*        padding-top: 50px;*/
-        width: 250px;
-        margin: 0;
-    }
-    
-    button{
-        float: none;
-        width: 100%;
-    }
-    
-    #map .container{
-        margin: 0px;
-        padding: 0px;
-        width: 95%;
-        
-    }
-    
-    #map{
-        margin: 0px;
-        height: 210px;
-        padding: 0px;
-/*        padding-right: 30px;/ */
-/*        padding: 0px;*/
-        
-    }
 
-}
 
 
 /* ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
@@ -217,9 +173,8 @@ footer{
 	margin-left:60%;
 	background-color:white;
 	display:inline-block;
-	position:absolute;
+    text-align: center;
 }
-
 #slideSection1 {
 	width:100%;
 	height:600px;
@@ -277,6 +232,77 @@ footer{
 	opacity:0.9;
 }
 
+@media(max-width: 768px){
+    header #title, nav, nav li{
+        float: none;
+        text-align: center;
+        width: 100%;
+    }
+    label{
+        display: block;
+        width: 100%;
+        height: 25px;
+        padding-top: 5px;
+    }
+    .box{
+        align-content: center;
+        float: none;
+        width: 95%;
+        margin: 1px;
+    }
+    .container form{
+        width: 90%;   
+    }
+    img{
+/*        padding-top: 50px;*/
+        width: 250px;
+        margin: 0;
+    }
+    
+    form button{
+        float: none;
+        width: 100%;
+        
+    }
+    
+    #map .container{
+        margin: 0px;
+        padding: 0px;
+        width: 95%;
+        
+    }
+    
+    #map{
+        margin: 0px;
+        height: 210px;
+        padding: 0px;
+        position: 
+/*        padding-right: 30px;/ */
+/*        padding: 0px;*/
+        
+    }
+    
+    #mapPane {
+	width:100%;
+	background-color:white;
+/*	position:absolute;*/
+    position: relative;
+}
+
+    #addressPane {
+        width:100%;
+        height:30px;
+        display: block;
+        margin: 0px;
+        text-align: center;
+    }
+    
+    footer{
+        margin-top: 60%;
+    }
+    
+
+}
 
 
 
