--- a/Front-Endv2/css/style.css
+++ b/Front-Endv2/css/style.css
@@ -1,3 +1,8 @@
+/*
+* {
+    box-sizing: border-box;
+}
+*/
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
@@ -94,8 +99,7 @@ form button{
 
 label{
     text-transform: uppercase;
-    height: 40px;
-    width: 172px;
+    width: 265px;
     margin: 10px;
     float: left;
     border-radius: 15px;
@@ -241,7 +245,6 @@ footer{
     label{
         display: block;
         width: 100%;
-        height: 25px;
         padding-top: 5px;
     }
     .box{
@@ -262,6 +265,7 @@ footer{
     form button{
         float: none;
         width: 100%;
+        
         
     }
     
@@ -291,10 +295,10 @@ footer{
 
     #addressPane {
         width:100%;
-        height:30px;
-        display: block;
+        height:5px;
         margin: 0px;
         text-align: center;
+        background: orange;
     }
     
     footer{
